# cpp-embedlib

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  justfile
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  main.cpp
benchmark/assets/: README.md  about.html  contact.html  index.html
benchmark/assets/api/: config.json  data.xml  users.json
benchmark/assets/css/: reset.css  style.css
benchmark/assets/js/: app.js  vendor.js
cmake/: cpp-embedlib-generate.cmake  cpp-embedlib.cmake
examples/basic/: CMakeLists.txt  main.cpp
examples/httplib/: CMakeLists.txt  main.cpp
examples/traverse/: CMakeLists.txt  main.cpp
examples/traverse/site/css/components/: button.css
examples/traverse/site/js/lib/: utils.js
examples/www/: index.html
examples/www/css/: style.css
include/cpp-embedlib/: cpp-embedlib.h
integrations/: cpp-embedlib-httplib.h
tests/: CMakeLists.txt  test_main.cpp
tests/assets/: a_b.txt
tests/cmake/: CMakeLists.txt
tests/cmake/duplicate_files/: CMakeLists.txt  main.cpp
tests/cmake/duplicate_files/assets/: dup.txt
tests/cmake/empty_folder/: CMakeLists.txt
tests/e2e/: CMakeLists.txt  test_httplib.cpp
